Added base scaffold for the styles

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,8 +1,8 @@
 .header {
   text-align: center;
-  background-color: #222;
+  background-color: ;
   height: 60px;
-  color: white;
+  color: #69ca62;
 }
 
 .title {
